Fix the overflowing screen Add Theme side drawer on the right

--- a/src/styles/scss/core/_side-drawer.scss
+++ b/src/styles/scss/core/_side-drawer.scss
@@ -1,5 +1,5 @@
 RadSideDrawer {
-    .nt-drawer__content,
+    > *,
     .sidedrawer-left,
     .sidedrawer-center {
         color: $primary;
